kubernetes/apps/artemis-cluster/test-nginx/app/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app nginx
  namespace: artemis-cluster
  labels:
    gateway-label: internal-gateway
spec:
  hostnames:
    - "nginx.local.dcunha.io"
  parentRefs:
    - name: internal-gateway
      namespace: default
  rules:
    - matches:
      - path:
        type: PathPrefix
        value: /
      backendRefs:
        - name: *app
          kind: Service
          port: 443
